Simplify the use of extraWords